--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <mat-toolbar color="primary">
-  <span>My Application</span>
+  <span>CSMastery</span>
 </mat-toolbar>
 <router-outlet></router-outlet>
