--- a/src/app/cs-mastery/alunos/alunos.component.html
+++ b/src/app/cs-mastery/alunos/alunos.component.html
@@ -9,13 +9,14 @@
 
     <mat-toolbar color="primary">Alunos</mat-toolbar>
 
-    <app-list-alunos></app-list-alunos>
+    <div class="column-flex mat-elevation-z8">
+      <app-list-alunos></app-list-alunos>
 
-    <ng-template #loading>
-      <div class="loadin-spineer">
-        <mat-spinner></mat-spinner>
-      </div>
-    </ng-template>
-
+      <ng-template #loading>
+        <div class="loadin-spineer">
+          <mat-spinner></mat-spinner>
+        </div>
+      </ng-template>
+    </div>
   </mat-card-content>
 </mat-card>
