--- a/src/app/cs-mastery/list-alunos/list-alunos.component.html
+++ b/src/app/cs-mastery/list-alunos/list-alunos.component.html
@@ -1,44 +1,44 @@
 
 <div *ngIf="alunos$ | async as alunos; else loading">
-  <table mat-table [dataSource]="alunos" class="mat-elevation-z8">
+  <mat-table [dataSource]="alunos" >
 
     <ng-container matColumnDef="nome">
-      <th mat-header-cell *matHeaderCellDef> Nome </th>
-      <td mat-cell *matCellDef="let aluno"> {{ aluno.nome }}
+      <mat-header-cell *matHeaderCellDef> Nome </mat-header-cell>
+      <mat-cell *matCellDef="let aluno"> {{ aluno.nome }}
         <mat-icon aria-hidden="false" aria-label="Teste de icones">{{ aluno.nome | categoria }}</mat-icon>
-      </td>
+      </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef> E-mail </th>
-      <td mat-cell *matCellDef="let aluno"> {{ aluno.email }} </td>
+      <mat-header-cell *matHeaderCellDef> E-mail </mat-header-cell>
+      <mat-cell *matCellDef="let aluno"> {{ aluno.email }} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="cpf">
-      <th mat-header-cell *matHeaderCellDef> CPF </th>
-      <td mat-cell *matCellDef="let aluno"> {{ aluno.cpf }} </td>
+      <mat-header-cell *matHeaderCellDef> CPF </mat-header-cell>
+      <mat-cell *matCellDef="let aluno"> {{ aluno.cpf }} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="telefone">
-      <th mat-header-cell *matHeaderCellDef> Telefone </th>
-      <td mat-cell *matCellDef="let aluno"> {{ aluno.telefone }} </td>
+      <mat-header-cell *matHeaderCellDef> Telefone </mat-header-cell>
+      <mat-cell *matCellDef="let aluno"> {{ aluno.telefone }} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef> Ações </th>
-      <td mat-cell *matCellDef="let aluno">
+      <mat-header-cell class="action-column" *matHeaderCellDef> Ações </mat-header-cell>
+      <mat-cell *matCellDef="let aluno" class="action-column">
         <button mat-icon-button color="primary" aria-label="Editar Aluno">
           <mat-icon>edit</mat-icon>
         </button>
         <button mat-icon-button color="warn" aria-label="Excluir Aluno">
           <mat-icon>delete</mat-icon>
         </button>
-      </td>
+      </mat-cell>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+  </mat-table>
 </div>
 
 <ng-template #loading>
