--- a/src/app/cs-mastery/alunos/alunos.component.html
+++ b/src/app/cs-mastery/alunos/alunos.component.html
@@ -10,13 +10,8 @@
     <mat-toolbar color="primary">Alunos</mat-toolbar>
 
     <div class="column-flex mat-elevation-z8">
-      <app-list-alunos></app-list-alunos>
-
-      <ng-template #loading>
-        <div class="loadin-spineer">
-          <mat-spinner></mat-spinner>
-        </div>
-      </ng-template>
+      <app-alunos-list></app-alunos-list>
     </div>
+
   </mat-card-content>
 </mat-card>
