--- a/src/app/cs-mastery/alunos/aluno-form/aluno-form.component.html
+++ b/src/app/cs-mastery/alunos/aluno-form/aluno-form.component.html
@@ -6,63 +6,117 @@
 
   <mat-card-content>
     <form [formGroup]="form" class="min-width">
-      <mat-form-field class="margin-fields-1em width-400">
-        <mat-label>Nome</mat-label>
-        <input matInput placeholder="Nome" formControlName="nome">
-        @if (requiredFormControl.hasError('required')) {
-          <mat-error>Nome é <strong>Obrigatório</strong></mat-error>
-        }
-      </mat-form-field>
 
-      <mat-form-field class="margin-fields-1em width-16em" >
-        <mat-label>E-mail</mat-label>
-        <input matInput placeholder="email@exemplo.com" formControlName="email" >
-        @if (emailFormControl.hasError('required')) {
-          <mat-error>E-mail é <strong>Obrigatório</strong></mat-error>
-        }
-      </mat-form-field>
+      <mat-list>
+        <mat-list-item>Dados Pessoais</mat-list-item>
+        <mat-divider></mat-divider>
 
-      <mat-form-field class="margin-fields-1em">
-        <mat-label>Telefone</mat-label>
-        <input matInput #telefone placeholder="(11) 12345-6789" formControlName="telefone" mask="(00) 00000-0000">
-        @if (requiredFormControl.hasError('required')) {
-          <mat-error>Telefone é <strong>Obrigatório</strong></mat-error>
-        }
-      </mat-form-field>
-
-      <mat-checkbox class="example-margin" color="primary" formControlName="mentoria" (change)="checkMentoria()">Mentoria</mat-checkbox>
-
-      <div *ngIf="isMentoria">
-        <mat-form-field class="margin-fields-1em width-400" >
-          <mat-label>Nome Sócio</mat-label>
-          <input matInput placeholder="Nome" formControlName="nome_socio">
+        <mat-form-field class="margin-fields-1em width-400">
+          <mat-label>Nome</mat-label>
+          <input matInput placeholder="Nome" formControlName="nome" #nome>
+          <mat-error *ngIf="form.get('nome')?.invalid">{{getErrorMesasge('nome')}}</mat-error>
+          <mat-hint align="end">{{ nome.value?.length || 0}}/100</mat-hint>
         </mat-form-field>
 
         <mat-form-field class="margin-fields-1em width-16em" >
-          <mat-label>E-mail Sócio</mat-label>
-          <input matInput formControlName="email_socio">
+          <mat-label>E-mail</mat-label>
+          <input matInput placeholder="email@exemplo.com" formControlName="email" >
+          <mat-error *ngIf="form.get('email')?.invalid">{{getErrorMesasge('email')}}</mat-error>
         </mat-form-field>
 
-        <mat-form-field class="margin-fields-1em" >
-          <mat-label>Telefone Sócio</mat-label>
-          <input matInput placeholder="(11) 12345-6789" formControlName="telefone_socio" mask="(00) 00000-0000">
-        </mat-form-field>
-      </div>
-
-      <div>
-        <mat-form-field class="margin-fields-1em width-400" >
-          <mat-label>Responsável</mat-label>
-          <input matInput placeholder="Nome" formControlName="responsavel">
+        <mat-form-field class="margin-fields-1em">
+          <mat-label>Telefone</mat-label>
+          <input matInput #telefone placeholder="(11) 12345-6789" formControlName="telefone" mask="(00) 00000-0000">
+          <mat-error *ngIf="form.get('telefone')?.invalid">Telefone é <strong>Obrigatório</strong></mat-error>
         </mat-form-field>
 
-        <mat-form-field class="margin-fields-1em" >
-          <mat-label>Data de Entrada</mat-label>
-          <input matInput [matDatepicker]="data_entrada" formControlName="data_entrada">
-          <mat-datepicker-toggle matIconSuffix [for]="data_entrada"></mat-datepicker-toggle>
-          <mat-datepicker #data_entrada disabled="false"></mat-datepicker>
-        </mat-form-field>
-      </div>
+        <mat-checkbox class="example-margin" color="primary" formControlName="mentoria" (change)="checkMentoria()">Mentoria</mat-checkbox>
 
+        <div *ngIf="isMentoria">
+          <mat-form-field class="margin-fields-1em width-400" >
+            <mat-label>Nome Sócio</mat-label>
+            <input matInput placeholder="Nome" formControlName="nome_socio">
+          </mat-form-field>
+
+          <mat-form-field class="margin-fields-1em width-16em" >
+            <mat-label>E-mail Sócio</mat-label>
+            <input matInput formControlName="email_socio">
+          </mat-form-field>
+
+          <mat-form-field class="margin-fields-1em" >
+            <mat-label>Telefone Sócio</mat-label>
+            <input matInput placeholder="(11) 12345-6789" formControlName="telefone_socio" mask="(00) 00000-0000">
+          </mat-form-field>
+        </div>
+
+        <div>
+          <mat-form-field class="margin-fields-1em width-400" >
+            <mat-label>Responsável</mat-label>
+            <input matInput placeholder="Nome" formControlName="responsavel">
+          </mat-form-field>
+
+          <mat-form-field class="margin-fields-1em" >
+            <mat-label>Data de Entrada</mat-label>
+            <input matInput [matDatepicker]="data_entrada" formControlName="data_entrada">
+            <mat-datepicker-toggle matIconSuffix [for]="data_entrada"></mat-datepicker-toggle>
+            <mat-datepicker #data_entrada disabled="false"></mat-datepicker>
+          </mat-form-field>
+        </div>
+
+        <mat-expansion-panel (opened)="painelEndereco = true"
+                             (closed)="painelEndereco = false">
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            Endereço
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <div formGroupName="endereco">
+
+          <mat-form-field class="margin-fields-1em width-400">
+            <mat-label>Logradouro</mat-label>
+            <input matInput placeholder="logradouro" formControlName="logradouro" >
+            <mat-error *ngIf="form.get('logradouro')?.invalid">{{getErrorMesasge('logradouro')}}</mat-error>
+          </mat-form-field>
+
+          <mat-form-field class="margin-fields-1em" >
+            <mat-label>Número</mat-label>
+            <input matInput placeholder="123a" formControlName="numero" >
+          </mat-form-field>
+
+          <mat-form-field class="margin-fields-1em">
+            <mat-label>Complemento</mat-label>
+            <input matInput placeholder="bem ali assim" formControlName="complemento" >
+          </mat-form-field>
+
+          <div>
+            <mat-form-field class="margin-fields-1em width-400" >
+              <mat-label>Bairro</mat-label>
+              <input matInput placeholder="Bairro" formControlName="bairro">
+            </mat-form-field>
+
+            <mat-form-field class="margin-fields-1em">
+              <mat-label>Cidade</mat-label>
+              <input matInput placeholder="Cidade" formControlName="cidade" >
+              <mat-error *ngIf="form.get('cidade')?.invalid">{{getErrorMesasge('cidade')}}</mat-error>
+            </mat-form-field>
+
+            <mat-form-field class="margin-fields-1em">
+              <mat-label>Estado</mat-label>
+              <input matInput placeholder="Estado" formControlName="estado" >
+              <mat-error *ngIf="form.get('estado')?.invalid">{{getErrorMesasge('estado')}}</mat-error>
+            </mat-form-field>
+
+            <mat-form-field class="margin-fields-1em">
+              <mat-label>CEP</mat-label>
+              <input matInput placeholder="00.000-000" formControlName="cep" mask="00.000-000" >
+              <mat-error *ngIf="form.get('cep')?.invalid">{{getErrorMesasge('cep')}}</mat-error>
+            </mat-form-field>
+          </div>
+
+        </div>
+      </mat-expansion-panel>
+
+      </mat-list>
     </form>
   </mat-card-content>
 
