add login with localStorage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,20 @@
 <mat-toolbar color="primary" class="mat-elevation-z3">
-  <button mat-icon-button (click)="collapsed.set(!collapsed())" >
+  <button mat-icon-button (click)="collapsed.set(!collapsed())" *ngIf="mostraMenu">
       <mat-icon class="mat-18">menu</mat-icon>
   </button>
 
   <span>CSMastery</span>
 </mat-toolbar>
 
-<mat-sidenav-container>
+<mat-sidenav-container *ngIf="mostraMenu" >
   <mat-sidenav opened mode="side" [style.width]="sidenavWidth()">
-    <app-custom-sidenav [collapsed]="collapsed()"></app-custom-sidenav>
+    <app-custom-sidenav [collapsed]="collapsed()" [userLogin]="userLogin" [perfil]="perfil"></app-custom-sidenav>
   </mat-sidenav>
 
   <mat-sidenav-content class="content" [style.margin-left]="sidenavWidth()">
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
+
+<router-outlet *ngIf="!mostraMenu" ></router-outlet>
 
