--- a/src/app/shared/components/custom-sidenav/custom-sidenav.component.html
+++ b/src/app/shared/components/custom-sidenav/custom-sidenav.component.html
@@ -1,8 +1,8 @@
 <div class="sidenav-header">
   <img [width]="profilePicSize()" [height]="profilePicSize()" src="../../../../assets/heu.jpg" />
   <div class="header-text" [class.hide-header-text]="sidenavCollapsed()">
-    <h2>Herbeth</h2>
-    <p>Perfil</p>
+    <h2>{{userLogin}}</h2>
+    <p>{{perfil}}</p>
   </div>
 </div>
 <mat-nav-list>
@@ -34,27 +34,3 @@
     </a>
   </div>
 </mat-nav-list>
-
-
-
-<!-- <div class="sidenav-header">
-  <img [width]="profilePicSize()" [height]="profilePicSize()" src="../../../../assets/heu.jpg" />
-  <div class="header-text" [class.hide-header-text]="sidenavCollapsed()">
-    <h2>Herbeth</h2>
-    <p>Perfil</p>
-  </div>
-</div>
-<mat-nav-list>
-  <a mat-list-item *ngFor="let item of menuItem()"
-
-    [routerLink]="item.route"
-    routerLinkActive="selected-menu-item"
-    #rla="routerLinkActive"
-    [activated]="rla.isActive">
-    <mat-icon [fontSet]="rla.isActive ? 'material-icons' : 'material-icons-outlined'" matListItemIcon >{{ item.icon }}</mat-icon>
-    <span matListItemTitle *ngIf="!sidenavCollapsed()">
-      {{ item.label }}
-    </span>
-  </a>
-</mat-nav-list>
- -->
