importing student by spreadsheet

--- a/src/app/cs-mastery/pages/alunos/alunos.component.html
+++ b/src/app/cs-mastery/pages/alunos/alunos.component.html
@@ -2,9 +2,10 @@
   <mat-card-content>
 
     <p>
-      <button (click)="newAluno()" mat-raised-button color="primary" aria-label="Adicionar Aluno">
+      <button (click)="newAluno()" mat-raised-button color="primary" aria-label="Adicionar Aluno" class="margin-right-button">
         <mat-icon>add</mat-icon> Adicionar
       </button>
+      <app-aluno-import></app-aluno-import>
     </p>
 
     <mat-toolbar color="primary">Alunos</mat-toolbar>
